--- a/blocks/elements/__button/elements__button.css
+++ b/blocks/elements/__button/elements__button.css
@@ -1,12 +1,13 @@
 .elements__button {
     width: 22px;
     height: 19px;
+    background: transparent;
     background-image: url(../../../images/like.svg);
-    object-fit: contain;
+    background-size: contain;
     border: none;
+    cursor: pointer;
 }
 
 .elements__button:hover {
     opacity: 0.5;
-    cursor: pointer;
   }
