--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,6 +6,7 @@
     width: 100%;
     column-gap: 17px;
     row-gap: 20px;
+    justify-content: center;
     margin: 50px auto 66px;
 }
 
@@ -15,5 +16,6 @@
         max-width: 282px;
         flex-direction: column;
         justify-content: center;
+        margin: 36px auto 48px;
     }
 }
