--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,9 +1,10 @@
 .popup__button {
-    width: 358px;
-    height: 50px;
+    max-width: 358px;
+    width: 100%;
+    padding: 10px 0 14px 0;
     background: #000000;
     border-radius: 2px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -11,18 +12,19 @@
     text-align: center;
     color: #FFFFFF;
     align-self: center;
+    border: none;
+    cursor: pointer;
 }
 
 .popup__button:hover {
     background-color: rgba(0, 0, 0, 0.8);
-    cursor: pointer;
   }
 
 @media screen and (max-width:596px) {
 
     .popup__button {
-        width: 238px;
-        height: 46px;
+        max-width: 238px;
+        padding: 14px 0;
         font-size: 14px;
         line-height: 17px;
     }
