--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,7 @@
     width: 120px;
     height: 120px;
     background-image: url(../../../images/avatar.jpg);
-    border-radius: 100%;
+    border-radius: 50%;
     background-size: cover;
+    background-position: center;
 }
