--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     gap:18px;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: nowrap;
 }
 
