--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,8 @@
 .profile__title {
-font-family: 'Inter';
+font-family: 'Inter', sans-serif;
+text-overflow: ellipsis;
+overflow: hidden;
+white-space: nowrap;
 font-style: normal;
 font-weight: 500;
 font-size: 42px;
