--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: row;
     margin: 0 auto;
+    padding: 40px 0 0;
     max-width: 880px;
     width: 100%;
-    justify-content:space-between;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: content-box;
 }
 
 @media screen and (max-width:596px) {
