--- a/pages/index.css
+++ b/pages/index.css
@@ -1,19 +1,18 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/inter.css);
+@import url(../vendor/fonts/inter.css);
 
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__editBtn/profile__editBtn.css);
-@import url(../blocks/profile/__addBtn/profile__addBtn.css);
+@import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
+@import url(../blocks/profile/__add-btn/profile__add-btn.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__description/profile__description.css);
@@ -26,6 +25,7 @@
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__button/elements__button.css);
 @import url(../blocks/elements/__button/_active/elements__button_active.css);
+@import url(../blocks/elements/__delete/elements__delete.css);
 
 @import url(../blocks/footer/footer.css);
 
@@ -38,6 +38,6 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__info/popup__info.css);
-
-
-* { outline: 1px solid yellow; }
+@import url(../blocks/popup/__image-zoom/popup__image-zoom.css);
+@import url(../blocks/popup/__image-title/popup__image-title.css);
+@import url(../blocks/popup/__container/_zoom-image/popup__container_zoom-image.css);
